Refactor `AuditService` to streamline Envers integration, introduce DTO-based audit history queries, and improve revision retrieval, property comparison, and entity modification tracking logic.